--- a/my-react-app/src/index.css
+++ b/my-react-app/src/index.css
@@ -1,4 +1,5 @@
 
+@import "tailwindcss";
 
 :root {
   font-family: system-ui, Avenir, Helvetica, Arial, sans-serif;
@@ -68,6 +69,3 @@ button:focus-visible {
     background-color: #f9f9f9;
   }
 }
-@tailwind base;
-@tailwind components;
-@tailwind utilities;
